@@ -1,3 +1,7 @@
+Fri Apr 10 19:10:34 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* ext/objspace/objspace.c (setup_hash): unify common routine.
+
 Fri Apr 10 18:29:49 2015  Tanaka Akira  <akr@fsij.org>
 
 	* process.c (rb_execarg_parent_start1): Handle EINTR.
